fix: very wide boards are not centered

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,7 +3,6 @@
 }
 
 :root {
-  --site-max-width: 50rem;
   --site-content-max-width: 35rem;
   --primary-color-dark-accent: darkslategray;
   --btn-color: #b9e9b9;
